File Name: CHANGES

10/16/2022 FASP 2.8.5:
- Use clang-format from OCP;
- Add GSF smoother (GS for F-points);
- Add a Fortran wrapper for Strumpack;

10/09/2022 FASP 2.8.4:
- Remove xcode support, move to VSCode+cmake completely;
- Add and reset .vscode settings;
- Update git ignores;
- Simplify cmake files;
- Test on arm64 computer.

10/03/2022 FASP 2.8.3:
- Add STRUMPACK as a direct solver;
- Wrong solution when used with STRUMPACK_METIS re-ordering for old METIS;
- Updated to METIS-5.1.0; seems to work using STRUMPACK_METIS now;;
- Update FindMETIS.cmake.

09/26/2022 FASP 2.8.2:
- Chang default behavoir: Do not require Fortran compilers!!!
- Do not compile Fortran by default;
- Use -DWITHFC=ON in cmake to enable Fortran support.

09/21/2022 FASP 2.8.1:
- Add OpenMP DLL version for Windows;
- Longer output format for residuals.

09/06/2022 FASP 2.8.0:
- Major Change: Need to update all FASP projects;
- Add abstol to KSM functions;
- Prepare for Iterative Refinement;
- Add LONGREAL (long double by default).

09/03/2022 FASP 2.7.9:
- Unify number of digits for output.

08/30/2022 FASP 2.7.8:
- Output stat information from MUMPS;
- Output stat information from UMFPACK;
- Output stat information from PARDISO;
- Test MUMPS, UMFPACK, and PARDISO with problems from DLD and Huawei;
- MUMPS-5.5.1 built with gfortran (does not work with ifort);
- SuiteSparse-5.12.0 built with clang (work with icc/gcc);
- Remove the GUI installation tcl/tk script;
- Update the outdated User Guide!!!

08/28/2022 FASP 2.7.7:
- Add output subroutine for MTX format;
- Test PARDISO and MUMPS;
- Modify the main test example: test.c;
- Fix a coarse level dof size bug: SHORT --> INT;
- Report MUMPS seg fault bug on OSX;
- Update documantation and webpage;
- Fix Doxygen problems.

08/28/2022 FASP 2.7.6:
- Prepare for Huawei's test problems;
- Merge different versions;
- Add MKL support for Mac OS X;
- Add METIS and GKlib support;
- Test linking to MUMPS;
- Test linking to MKL Pardiso;